--- a/index.html
+++ b/index.html
@@ -12,19 +12,74 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/flat-ui.css">
+
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
+        <script src="js/vendor/jquery-1.9.0.min.js"></script>
         <script src="js/app.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap-tooltip.js"></script>
+        <script src="js/custom_checkbox_and_radio.js"></script>
+        <script src="js/custom_radio.js"></script>
+        <script src="js/html5shiv.js"></script>
+        <script src="js/jquery-ui-1.10.0.custom.min.js"></script>
+        <script src="js/jquery.dropkick-1.0.0.js"></script>
+        <script src="js/jquery.placeholder.js"></script>
+        <script src="js/jquery.tagsinput.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <script src="js/JSLINQ.js"></script>
-        <h1 class="text-center">Age Calculator</h1>
-        <div class="data">
+
+        <div class="hero-unit">
+            <h1>Css Cheat Sheet</h1>
+            <p>A quick reference for help with html styling.</p>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="span2 text-center">
+                    <select class="text-left" style="display: none;" tabindex="1" name="CssSelection">
+                        <option value="Animation">Animation</option>
+                        <option value="Background">Background</option>
+                        <option value="Box">Box</option>
+                        <option value="Border/Outline">Border/Outline</option>
+                        <option value="Color">Color</option>
+                        <option value="Dimension">Dimension</option>
+                        <option value="Font">Font</option>
+                        <option value="Flexible Box">Flexible Box</option>
+                        <option value="Generated Content">Generated Content</option>
+                        <option value="Grid">Grid</option>
+                        <option value="Linebox">Linebox</option>
+                        <option value="List">List</option>
+                        <option value="Margin">Margin</option>
+                        <option value="Marquee">Marquee</option>
+                        <option value="Multi column">Multi column</option>
+                        <option value="Padding">Padding</option>
+                        <option value="Paged Media">Paged Media</option>
+                        <option value="Positioning">Positioning</option>
+                        <option value="Print">Print</option>
+                        <option value="Hyperlink">Hyperlink</option>
+                        <option value="Ruby">Ruby</option>
+                        <option value="Speech">Speech</option>
+                        <option value="Table">Table</option>
+                        <option value="Text">Text</option>
+                        <option value="Transform 2d/3d">Transform 2d/3d</option>
+                        <option value="Transition">Transition</option>
+                        <option value="User interface">User interface</option>
+                    </select>
+                </div>
+
+                </div>
+                <div class="span10">
+                    <table class='table table-striped' id="information">
+                    </table>
+                </div>
+            </div>
         </div>
 
         <script type="text/javascript">
@@ -36,6 +91,24 @@
 
                 $(library.items).each(function(index, element){
                     $(".data").append(element.description);
+                });
+
+                $("select").dropkick({
+                    change: function (value, label) {
+                        //update the info
+
+                        var items = JSLINQ(library.items)
+                                .Where(function(item){return item.type == value});
+
+                        $("#information").append("<tr><td><strong>Property</strong></td><td><strong>Description</strong></td><td><strong>Version</strong></td></tr>");
+                        $(items.items).each(function(index, element){
+                            $("#information").append("<tr>" +
+                                    "<td>" + element.property + "</td>" +
+                                    "<td>" + element.description + "</td>" +
+                                    "<td>" + element.version + "</td>" +
+                                    "</tr>");
+                        });
+                    }
                 });
             });
         </script>
